--- a/LinearAlgebra.ipynb
+++ b/LinearAlgebra.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6uI/VuNgEXrP+ruRx8e0s",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOab+jVxrVCx7WIfQz9K+2+"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,31 +16,22 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/thanhson511/LinearAlgebra/blob/main/LinearAlgebra.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nk1WmRgW4qTC",
-        "outputId": "fa50c2e5-3359-4ae0-d2bf-558498d26d2f"
+        "outputId": "a107dd0a-ee21-447c-cf38-fac2478c1f47"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\\left[\\begin{matrix}1 & -1 & 2 & -2\\\\8 & 1 & 4 & 5\\\\-20 & -7 & -2 & -23\\\\-26 & -1 & -16 & -11\\end{matrix}\\right]\n"
+            "\\left[\\begin{matrix}1 & 2 & 1 & -1 & 0\\\\8 & 7 & -1 & 7 & 0\\\\-25 & -23 & 8 & -18 & 0\\\\-26 & -25 & 1 & -19 & 0\\end{matrix}\\right]\n",
+            "\\left[\\begin{pmatrix}1 & 2 & 1 & -1 & 0\\\\8 & 7 & -1 & 7 & 0\\\\-25 & -23 & 8 & -18 & 0\\\\-26 & -25 & 1 & -19 & 0\\end{pmatrix}\\right]\n"
           ]
         }
       ],
@@ -54,18 +44,19 @@
         "from sympy import Matrix, latex\n",
         "\n",
         "# Define a matrix\n",
-        "A = Matrix([[1, -1, 2,-2],\n",
-        "            [2, 1, 0, 3],\n",
-        "            [0, 0, 2, 0],\n",
-        "            [0, 0, 0, 0]])\n",
+        "A = Matrix([[1, 2, 1,-1, 0],\n",
+        "            [2, 1, -1, 3, 0],\n",
+        "            [0, 0, 3, 1, 0],\n",
+        "            [0, 0, 0, 0, 0]])\n",
         "\n",
         "\n",
         "# Example new :\n",
         "A.row_op(1, lambda x, i: x*3 +2*A[0,i])\n",
         "A.row_op(3, lambda x, i: x - 2 * A[0, i] - 3*A[1,i])\n",
-        "A.row_op(2, lambda x, i: x + 4 * A[0, i] - 3*A[1,i])\n",
+        "A.row_op(2, lambda x, i: 2*x -A[0, i] - 3*A[1,i])\n",
         "\n",
-        "print(latex(A))"
+        "print(latex(A))\n",
+        "print(latex(A).replace(\"matrix\",\"pmatrix\"))"
       ]
     }
   ]
